--- a/Assign3/style.css
+++ b/Assign3/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: sans-serif;
-    color: black;
-    background-color: white;
+    color: white;
+    background-color: rgb(40, 42, 53);
     opacity: 0.7;
 }
 
@@ -29,3 +29,98 @@ footer {
     font-size: 16px;
 }
 
+nav {
+    padding-top: 2em;
+    padding-bottom: 2em;
+}
+
+.tesla {
+    padding-bottom: 2em;
+    padding-top: 2em;
+}
+
+.banner {
+    height: 300px;
+    width: 980px;
+    color: rgba(250, 0, 0);
+}
+
+.home {
+    color: #C2A242;
+    text-decoration: none;
+    font-size: large;
+    font-weight: bold;
+    border-color: #C2A242;
+    border-style: solid;
+    border-radius: 10px;
+    padding: 1em;
+}
+
+/* table */
+table {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-collapse: collapse;
+    width: 100%;
+    text-align: center;
+}
+
+th{
+    font-size: 40px;
+    padding: 15px;
+}
+
+td{
+    font-size: 15px;
+    text-align: center;
+    padding: 15px;
+}
+
+.title{
+    background-color: white;
+    color: rgb(40, 42, 53, 0.7);
+    border-radius: 5px 50px;
+}
+
+.special{
+    background-color: white;
+    color: black;
+    border-radius: 50px 5px;;
+}
+
+.ivan{
+    border: 1px solid white;
+}
+
+.performance{
+    background-color: white;
+    color: rgb(40, 42, 53, 0.7);
+    border-radius: 5px 50px;
+    font-size: x-large;
+    font-weight: 600;
+}
+
+.model3{
+    width: 100%;
+}
+
+/* hover */
+.banner:hover{
+    color: rgba(224, 58, 58, 0.765);
+}
+
+.home:hover {
+    color: white;
+    text-decoration: none;
+    border-color: white;
+}
+
+.model3:hover {
+    opacity: 0.6;
+}
+
+.ivan:hover {
+    background-color: #ddd;
+    color: black;
+    opacity: 0.8;
+}
