--- a/Assign2/style.css
+++ b/Assign2/style.css
@@ -152,6 +152,10 @@ footer {
 
 @media only screen and (min-width: 600px) {
 
+    li{
+        font-size: 6px;
+    }
+
     /* For mobile: */
     footer {
         font-size: 6px;
@@ -159,6 +163,10 @@ footer {
 }
 
 @media only screen and (min-width: 992px) {
+
+    li{
+        font-size: 12px;
+    }
 
     /* For desktop: */
     footer {
