--- a/Project/style.css
+++ b/Project/style.css
@@ -2,8 +2,6 @@ body {
     font-family: 'Source Sans Pro', sans-serif !important;
     color: black;
     background-color: #F2F2F2;
-    opacity: 0.9;
-    
 }
 
 header {
@@ -12,6 +10,7 @@ header {
     margin: -10px -20px 0 -10px;
     color: white;
     padding: 0px;
+  
 }
 
 div {
@@ -207,10 +206,15 @@ nav {
     width: 31px;
 }
 
+.heart-empty-house{
+    height: 27px;
+    width: 31px;
+    padding-right: 7.5px;
+}
+
 /*project css*/
 
 .agent-name {
-
     display: flex;
     width: 100%;
     margin: 10px 0 10px 0;
@@ -255,11 +259,6 @@ nav {
     display: flex;
     align-content: space-between;
     width: 50%;
-}
-
-.grid-item:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
 }
 
 .peter {
@@ -318,6 +317,7 @@ nav {
     background-color: white;
     border: 1px solid #cdcdcd;
     box-sizing: border-box;
+    margin-bottom: 20px;
 }
 
 .listing-card-container{
@@ -326,12 +326,23 @@ nav {
     margin-bottom: 10px;
     margin-left: -15px;
     margin-top: 20px;
+    padding-bottom: 3%;
+}
+
+.listing-card-house-container{
+    display: flex;
+    justify-content: space-around;
+    margin-left: -15px;
 }
 
 .listing-card-item{
     border: 1px solid #CCCCCC;
- 
     width: 290px;
+}
+
+.button-type{
+    text-decoration: none;
+    color: #000;
 }
 
 .like{
@@ -355,9 +366,8 @@ nav {
 
 }
 
-.information{
+.address{
     width: 260px;
-    height: 166px;
     padding: 15px;
 }
 
@@ -370,3 +380,160 @@ nav {
     display: block;
     white-space: nowrap;
 }
+
+.information {
+    display: flex;
+    justify-content: space-around;
+    padding: 15px 0px;
+    color: #666666;
+    margin-top: 7px;
+    padding: 15px;
+    width: auto;
+}
+
+.information-house {
+    display: flex;
+    justify-content: flex-end;
+    padding: 15px 0px;
+    color: #666666;
+    margin-top: 7px;
+    width: auto;
+}
+
+.information-item {
+    padding: 10px 0 10px 10px;
+}
+
+
+.bedroom {
+    height: 20px;
+    max-width: 25px;
+}
+
+.small-text{
+    font-size: 0.7rem;
+    color: #666666;
+}
+
+.listing-card-end{
+    font-size: 0.85rem;
+    border-top: 1px solid #CCCCCC;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: auto;
+}
+
+.card-image{
+    max-height: 40px;
+    -o-object-fit: contain;
+    object-fit: contain;
+    vertical-align: middle;
+}
+
+.company-name{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 20%;
+}
+
+.footer-container-a{
+    background-color: #4F485A;
+    display: flex;
+    padding: 25px 75px 30px 75px;
+    box-sizing: border-box;
+    justify-content: space-around;
+    color: white;
+    height: 150px;
+}
+
+.footer-container-b{
+    background-color: #3B3842;
+    border: 1px solid #3B3842;
+    box-sizing: border-box;
+    color: white;
+    margin: 0;
+    padding: 10px;
+}
+
+/*house1*/
+
+.house-image{
+    height: 200px;
+    aspect-ratio: auto 256 / 200;
+    width: 256px;
+}
+
+.listing-card-container-a{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    margin-left: -15px;
+    margin-top: 20px;
+    padding-bottom: 3%;
+}
+
+.listing-card-item-a{
+    padding-left: 15px;
+    display: flex;
+    align-items: center;
+}
+
+.listing-card-item-b{
+    padding-right: 15px;
+}
+
+.house-heart{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.small-text-end{
+    font-size: 0.7rem;
+    color: #666666;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.description{
+    font-size: 1.5rem;
+    font-weight: normal;
+}
+
+table {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-collapse: collapse;
+    width: 100%;
+    text-align: center;
+}
+
+th{
+    font-size: 1.5rem;
+    font-weight: normal;
+    text-align: left;
+}
+
+td{
+    font-size: 15px;
+    text-align: center;
+    padding: 15px;
+}
+
+/*hover*/
+
+.grid-item-left:hover, .grid-item-right:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+}
+
+.listing-card-item:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+
+
