--- a/Project/style.css
+++ b/Project/style.css
@@ -32,6 +32,18 @@ nav {
     padding-bottom: 2em;
 }
 
+textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #44433E;
+    border-radius: 4px;
+    background-color: #f8f8f8c7;
+    font-size: 16px;
+    resize: none;
+}
+
 /*nav
  css*/
 .project-container {
@@ -225,6 +237,7 @@ nav {
 .agent {
     text-align: center;
     font-size: 24px;
+    padding-top: 40px;
 }
 
 .grid-container {
@@ -326,6 +339,15 @@ nav {
     margin-bottom: 10px;
     margin-left: -15px;
     margin-top: 20px;
+    padding-bottom: 3%;
+}
+
+.listing-card-house-container-a{
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 10px;
+    margin-top: 20px;
+    padding-top: 10px;
     padding-bottom: 3%;
 }
 
@@ -458,6 +480,11 @@ nav {
     padding: 10px;
 }
 
+.footer-b{
+    color: white;
+    text-decoration: none;
+}
+
 /*house1*/
 
 .house-image{
@@ -507,7 +534,6 @@ table {
     padding-bottom: 10px;
     border-collapse: collapse;
     width: 100%;
-    text-align: center;
 }
 
 th{
@@ -518,8 +544,120 @@ th{
 
 td{
     font-size: 15px;
-    text-align: center;
-    padding: 15px;
+    text-align: left;
+    padding: 15px 0 0 15px;
+    vertical-align: text-top;
+    width: 20%;
+}
+
+.category{
+    margin-left: 5px;
+    font-size: 1.2rem;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #cdcdcd;
+}
+
+.house-last{
+    padding-bottom: 30px;
+}
+
+/*contact-form*/
+.form{
+    border-style: double;
+    border: 8px ;
+    border-color: #454547;
+}
+
+.contact-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 16px;
+}
+
+.contact-.title{
+    background-color: #44433E;
+    color: white;
+    padding: 8px 5px;
+    font-size: 24px;
+}
+
+.contact-option{
+    display: flex;
+    justify-content: space-around;
+    font-size: 16px;
+    padding: 20px;
+}
+
+.contact-button{
+    padding: 10px;
+    font-size: 20px;
+    color: white;
+    border-radius: 30px;
+    font-weight: bold;
+    text-decoration: none;
+    background-color: #CE1714;
+    border-color: black;
+    border-style: solid;
+}
+
+.contact-url{
+    display: flex;
+    justify-content: space-around;
+    padding: 10px;
+}
+
+.style-line {
+    width: 80%;
+    padding: 5px 5px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid #000000;
+    font-size: 16px;
+}
+
+.style-shortline {
+    width: 20%;
+    padding: 2px 5px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid #000000;
+    margin-bottom: 20px;
+}
+
+.style-line-11 {
+    width: 63%;
+    padding: 5px 5px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid #000000;
+    font-size: 16px;
+}
+
+.style-line-12 {
+    width: 68.2%;
+    padding: 5px 5px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid #000000;
+    font-size: 16px;
+}
+
+ol{
+    margin-left: -20px;
+}
+
+.white {
+    color: white;
 }
 
 /*hover*/
@@ -535,5 +673,26 @@ td{
     cursor: pointer;
 }
 
+.contact-button:hover {
+    cursor: pointer;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+}
+
+@media only screen and (min-width: 600px) {
+
+    /* For mobile: */
+    li {
+        font-size: 16px;
+    }
+}
+
+@media only screen and (min-width: 992px) {
+
+    /* For desktop: */
+    li {
+        font-size: 16px;
+    }
+}
 
 
